--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "vue3snippets.enable-compile-vue-file-on-did-save-code": true,
-  "cSpell.words": ["Navs", "SUPABASE", "superbase"]
+  "cSpell.words": ["Navs", "signout", "SUPABASE", "superbase"]
 }
